# ClientDevLib

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Features.cmake  GeneralFeatures.cmake  MacFeatures.cmake  README.md  WinFeatures.cmake  imgui.ini
MacOS/: CMakeLists.txt  test.mm
MacOS/util/: FileUtil.h  FileUtil.mm  NetworkUtil.h  NetworkUtil.mm  Process.h  Process.mm  ProcessV2.mm  ProfileUtil.h  ProfileUtil.mm  Service.h  Service.mm  StringUtil.h  StringUtil.mm  System.mm  SystemUtil.h  SystemUtil.mm  User.mm  UserInfo.mm
MacOS/util/Application/: Deeplink.mm  Software.mm
MacOS/util/Certificate/: Certificate.mm
MacOS/util/Network/: DnsHelper.mm  NetworkAdapter.mm  NetworkUtil.h  NetworkUtil.mm
MacOS/util/Network/Pcap/: PcapInterface.mm
MacOS/util/ProcessIterator/: process_iterator.cpp  process_iterator.h  process_iterator_apple.cpp
Scripts/: compile.py  ollvm_config.py
Windows/: CMakeLists.txt  test.cpp  testWindow.cpp  testdll.cpp
Windows/DriverInput/: CMakeLists.txt  main.cpp
Windows/test/: GameManager.cpp  GameManager.h  GameSetting.cpp  GameSetting.h  SpeedHack.h  packetfilter.py  test.cpp  testWindow.cpp  testdll.cpp
Windows/test/example/: bypassav_cs.cpp  hookSingleAddress.cpp  stopAtEntryPointAndModify.cpp  stopAtEntryPointAndModifyAndInjectDll.cpp
Windows/test/example/d3d9HookWithImgui/: GameSetting.h  testdll.cpp
Windows/test/example/rawinput_demo/: dinput_demo.cpp  dinput_hook_dll.cpp  inject_simple.cpp  list_sdl_exports.cpp  pipe_client.py  rawinput_demo.cpp  rawinput_detour_demo.cpp  rawinput_hook_dll.cpp  sdl3_hook_dll.cpp
Windows/test/example/so3dFullCheat/: GameManager.cpp  GameManager.h  GameSetting.cpp  GameSetting.h  Messager.cpp  Messager.h  SpeedHack.cpp  SpeedHack.h  buyItem.py  packetfilter.py  so3d.rcnet  test.cpp  testdll.cpp
Windows/test/example/so3dFullCheat/dieServer/: server.py
Windows/test/util/: App.cpp  App.h
Windows/util/: Common.h  FileUtil_win32.h  HandleHelper.cpp  HandleHelper.h  Process.cpp  ProcessKernelStruct_win32.h  ProcessUtil_win32.inl  Service.cpp  Service.h  SoftWare.h  Software.cpp  Thread.cpp  UserInfo.cpp  UserInfo.h  WinReg.hpp  WindowsUpdate.cpp  WindowsUpdate.h  log.cpp  log.h
Windows/util/AntiDebug/: CommonApi.cpp  CommonApi.h  ExceptionDetect.cpp  ExceptionDetect.h  MemoryScan.hpp  TLSCallBack.cpp  TLSCallBack.h  ThreadExecute.cpp  ThreadExecute.h
Windows/util/AntiVM/: SandBox.cpp  SandBox.h  VBox.cpp  VBox.h  VMWare.cpp  VMWare.h
Windows/util/ApiLoader/: ApiTypeDefs.h  Apis.cpp  Apis.h  WinStruct.h
Windows/util/Application/: App.cpp  App.h  Deeplink.cpp  SoftWare.h  Software.cpp  WinDynCalls.cpp  WinDynCalls.h  WindowsUpdate.h
Windows/util/Application/test/: reflect_test.cpp  service_test.cpp
Windows/util/COM/: COMHelper.cpp  COMHelper.h  WMIHelper.cpp  WMIHelper.h
Windows/util/Certificate/: Certificate.cpp  NcryptWrapper.cpp  NcryptWrapper.hpp  TPMKey.cpp  TPMKey.hpp
Windows/util/Debug/: CRTdbgHeader.h  StackWalker.cpp
Windows/util/Device/: Graphics.cpp  Graphics.h  HardWare.cpp  HardWare.h  InputDevice.cpp  InputDevice.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Window.cpp  Window.h  WindowsMessageMap.cpp  WindowsMessageMap.h
Windows/util/Device/DXError/: DXException.cpp  DxgiInfoManager.cpp
Windows/util/Device/Interception/: DeviceHelper.cpp  DeviceHelper.h  interception.c  interception.h
Windows/util/Device/Printer/: PrinterUtil.cpp  PrinterUtil.h
Windows/util/Device/Shaders/: PixelShader.hlsl  VertexShader.hlsl
Windows/util/DirectX/: D3D9Hook.cpp  D3D9Hook.h  DWMHook.cpp  DWMHook.h  Setting.hpp
Windows/util/EventTrace/: ETWHelper.cpp  ETWHelper.h  event_property.cpp  event_property.h  event_provider_list.cpp  event_provider_list.h  event_trace.cpp  event_trace_error.cpp  event_trace_session.h  event_trace_session_properties.cpp  guid_helpers.cpp
Windows/util/Exception/: Exception.cpp
Windows/util/File/: File.cpp  File.h  FileHelper.cpp  FileHelper.h  FileUtil_win32.inl
Windows/util/File/PEFile/: PEhelper.cpp  PEhelper.h  ResourceHelper.cpp  ResourceHelper.h
Windows/util/GUI/: FontHelper.h  paint.h
Windows/util/Graphics/: Camera.cpp  Camera.h  Color.h  FontHelper.cpp  GDIPlusManager.cpp  GDIPlusManager.h  Graphics.cpp  Graphics.h  ImguiManager.cpp  ImguiManager.h  Math.h  Paint.cpp  PointLight.cpp  PointLight.h  Surface.cpp  Surface.h  Vertex.cpp  Vertex.h  Window.cpp  Window.h  WindowHelper.cpp  WindowHelper.h
Windows/util/Graphics/Bindable/: Bindable.cpp  Bindable.h  BindableCommon.h  ConstantBuffers.h  IndexBuffer.cpp  IndexBuffer.h  InputLayout.cpp  InputLayout.h  PixelShader.cpp  PixelShader.h  Sampler.cpp  Sampler.h  Texture.cpp  Texture.h  Topology.cpp  Topology.h  TransformCbuf.cpp  TransformCbuf.h  VertexBuffer.cpp  VertexBuffer.h  VertexShader.cpp  VertexShader.h
Windows/util/Graphics/DXError/: DXException.cpp  DxgiInfoManager.h
Windows/util/Graphics/Drawable/: AssTest.cpp  AssTest.h  Box.cpp  Box.h  Cylinder.cpp  Cylinder.h  Drawable.cpp  Drawable.h  DrawableBase.h  Melon.cpp  Melon.h  Mesh.cpp  Mesh.h  Pyramid.cpp  Pyramid.h  Sheet.cpp  Sheet.h  SkinnedBox.cpp  SkinnedBox.h  SolidSphere.cpp  SolidSphere.h  TestObject.h
Windows/util/Graphics/Primitives/: Cone.h  Cube.h  IndexedTriangleList.h  Plane.h  Prism.h  Sphere.h
Windows/util/IPC/: IPC.cpp  IPC.h
Windows/util/Network/: DnsHelper.cpp  NetworkAdapter.cpp
Windows/util/Process/: Process.cpp  ProcessHelper.cpp  ProcessHelper.h  ProcessUtil_win32.h  Thread.cpp  ThreadHelper.cpp  ThreadHelper.h
Windows/util/Registry/: WinReg.hpp
Windows/util/Service/: Service.cpp  Service.h  WinService.cpp  WinService.h
Windows/util/StartUp/: StartUp.cpp  StartUp.h
Windows/util/Sync/: Semaphore.h
Windows/util/System/: Console.hpp  Domain.cpp  Domain.h  System.cpp  SystemHelper.cpp  SystemHelper.h
Windows/util/TaskScheduler/: TaskScheduler.cpp  TaskScheduler.h
Windows/util/User/: UserInfo.cpp  UserInfo.h
Windows/util/event_tracing/: ETWHelper.h  elevated_check.cpp  event_info.cpp  event_info.h  event_trace.h  event_trace_session.cpp
(+105 files in other folders)
